--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.6",
     "typescript": "^4.0.5"
   }
