--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "start:dev": "tsc -w & nodemon -q -w dist dist/index.js",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build": "rimraf -d dist && tsc"
   },
   "dependencies": {
     "apollo-server": "^2.19.0",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "dotenv": "^8.2.0",
     "nodemon": "^2.0.6",
+    "rimraf": "^3.0.2",
     "typescript": "^4.0.5"
   }
 }
